API and UI - Feature update

--- a/WebUI/src/app/app.component.html
+++ b/WebUI/src/app/app.component.html
@@ -23,6 +23,16 @@
           Employees
         </button>
       </li>
+
+      <li class="nav-item">
+        <button
+          routerLink="employeeTasks"
+          class="m-1 btn btn-light btn-outline-primary"
+          Button
+        >
+          Tasks
+        </button>
+      </li>
     </ul>
   </nav>
 
