--- a/WebUI/src/app/employeetasks/add-edit-tasks/add-edit-tasks.component.html
+++ b/WebUI/src/app/employeetasks/add-edit-tasks/add-edit-tasks.component.html
@@ -10,7 +10,31 @@
       />
     </div>
 
-    <label class="col-sm-2 col-form-label">Department</label>
+    <label class="col-sm-2 col-form-label">Start Time</label>
+    <div class="col-sm-10">
+      <input
+        type="time"
+        id="appt"
+        name="appt"
+        min="09:00"
+        max="18:00"
+        required
+      />
+    </div>
+
+    <label class="col-sm-2 col-form-label">End Time</label>
+    <div class="col-sm-10">
+      <input
+        type="time"
+        id="appt"
+        name="appt"
+        min="09:00"
+        max="18:00"
+        required
+      />
+    </div>
+
+    <!-- <label class="col-sm-2 col-form-label">Department</label>
     <div class="col-sm-10">
       <select class="form-control" [(ngModel)]="Department">
         <option>--Select--</option>
@@ -18,14 +42,14 @@
           {{ depName.DepartmentName }}
         </option>
       </select>
-    </div>
-
-    <!-- <label class="col-sm-2 col-form-label">Date of joining</label>
-    <div class="col-sm-10">
-      <input type="date" [(ngModel)]="DateOfJoining" />
     </div> -->
 
-    <label class="col-sm-2 col-form-label">Tasks</label>
+    <label class="col-sm-2 col-form-label">Completed On</label>
+    <div class="col-sm-10">
+      <input type="date" [(ngModel)]="DateOfJoining" />
+    </div>
+
+    <!-- <label class="col-sm-2 col-form-label">Tasks</label>
     <div class="col-sm-12">
       <select class="form-control" [(ngModel)]="Tasks">
         <option>--Select--</option>
@@ -33,13 +57,13 @@
           {{ task.Tasks }}
         </option>
       </select>
-    </div>
+    </div> -->
   </div>
 
-  <!-- <div class="ml-3 bd-highlight" style="width: 40%">
-    <img [src]="PhotoFilePath" height="250px;" width="200px;" />
-    <input type="file" (change)="uploadPhoto($event)" class="mt-2" />
-  </div> -->
+  <div class="ml-3 bd-highlight" style="width: 40%">
+    <img src="task.jpg" alt="Task Image" />
+    <!-- <input type="file" (change)="uploadPhoto($event)" class="mt-2" /> -->
+  </div>
 </div>
 
 <button
