--- a/WebUI/src/app/employeetasks/add-edit-tasks/add-edit-tasks.component.html
+++ b/WebUI/src/app/employeetasks/add-edit-tasks/add-edit-tasks.component.html
@@ -1,5 +1,15 @@
 <div class="d-flex flex-row bd-highlight mb-3">
   <div class="form-froup row" style="width: 60%">
+    <label class="col-sm-2 col-form-label">Employee</label>
+    <div class="col-sm-10">
+      <select class="form-control" [(ngModel)]="EmployeeName">
+        <option>--Select--</option>
+        <option *ngFor="let empName of EmployeeList">
+          {{ empName.EmployeeList }}
+        </option>
+      </select>
+    </div>
+
     <label class="col-sm-2 col-form-label">Description</label>
     <div class="col-sm-10">
       <input
