--- a/WebUI/src/app/employeetasks/show-tasks/show-tasks.component.html
+++ b/WebUI/src/app/employeetasks/show-tasks/show-tasks.component.html
@@ -35,7 +35,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <app-add-edit-tasks [task]="task" *ngIf="ActivateAddEditTaskComp">
+        <app-add-edit-tasks *ngIf="ActivateAddEditTaskComp">
         </app-add-edit-tasks>
       </div>
     </div>
