--- a/WebUI/src/app/employee/add-edit-emp/add-edit-emp.component.html
+++ b/WebUI/src/app/employee/add-edit-emp/add-edit-emp.component.html
@@ -22,7 +22,11 @@
 
     <label class="col-sm-2 col-form-label">Date of joining</label>
     <div class="col-sm-10">
-      <input type="date" [(ngModel)]="DateOfJoining" />
+      <input
+        type="date"
+        [ngModel]="DateOfJoining | date: 'yyyy-MM-dd'"
+        (ngModelChange)="updatedate($event)"
+      />
     </div>
   </div>
   <div class="ml-3 bd-highlight" style="width: 40%">
