--- a/WebUI/src/app/employeetasks/add-edit-tasks/add-edit-tasks.component.html
+++ b/WebUI/src/app/employeetasks/add-edit-tasks/add-edit-tasks.component.html
@@ -6,11 +6,11 @@
         class="form-control"
         id="employee"
         name="employee"
-        [(ngModel)]="selectedEmployee"
+        [(ngModel)]="task.EmployeeId"
       >
         <option [ngValue]="undefined" selected="true">--Select--</option>
-        <option *ngFor="let empName of EmployeeList" [ngValue]="empName">
-          {{ empName.EmployeeName }}
+        <option *ngFor="let emp of EmployeeList" [ngValue]="emp.Id">
+          {{ emp.EmployeeName }}
         </option>
       </select>
     </div>
@@ -51,30 +51,10 @@
       />
     </div>
 
-    <!-- <label class="col-sm-2 col-form-label">Department</label>
-    <div class="col-sm-10">
-      <select class="form-control" [(ngModel)]="Department">
-        <option>--Select--</option>
-        <option *ngFor="let depName of DepartmentList">
-          {{ depName.DepartmentName }}
-        </option>
-      </select>
-    </div> -->
-
     <label class="col-sm-2 col-form-label">Completed On</label>
     <div class="col-sm-10">
       <input type="date" [(ngModel)]="CompletedOn" />
     </div>
-
-    <!-- <label class="col-sm-2 col-form-label">Tasks</label>
-    <div class="col-sm-12">
-      <select class="form-control" [(ngModel)]="Tasks">
-        <option>--Select--</option>
-        <option *ngFor="let Tasks of DepartmentList">
-          {{ task.Tasks }}
-        </option>
-      </select>
-    </div> -->
   </div>
 
   <div class="ml-3 bd-highlight" style="width: 40%">
@@ -91,6 +71,10 @@
   Add
 </button>
 
-<button *ngIf="task.Id" (click)="updateTasks()" class="btn btn-primary">
+<button
+  *ngIf="task.Id && task.Id != 0"
+  (click)="updateTasks()"
+  class="btn btn-primary"
+>
   Update
 </button>
